# ai-etl

./: LICENSE  PROJECT_CONTEXT.md  PROMPT.md  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile
examples/: example_1.md  example_1.yaml  expected.yaml  input.txt  input.yaml  rulebook.md  rulebook.yaml
examples/benchmark_pack_01/: README.md
examples/benchmark_pack_01/expected/: controls.yaml  flagged_transactions.csv  flags.yaml  reporting_requirements.yaml
examples/benchmark_pack_01/inputs/: regulatory_excerpt.yaml  requirements_and_transactions.yaml  transactions.csv
examples/benchmark_pack_01/prompts/: flags_judge.yaml  requirements_to_flags.yaml
examples/benchmark_pack_01/rulebooks/: controls_to_requirements.yaml  flags_judge.yaml  judge.yaml  reg_to_controls.yaml  requirements_to_flags.yaml  validate_reporting_requirements.yaml
examples/benchmark_pack_02/: README.md
examples/benchmark_pack_02/expected/: controls.yaml  flagged_events.csv  flags.yaml  reporting_requirements.yaml
examples/benchmark_pack_02/inputs/: clinical_events.csv  medical_guideline_excerpt.md
examples/benchmark_pack_02/prompts/: guideline_to_controls.yaml  requirements_to_flags.yaml
examples/benchmark_pack_03/: README.md
prompts/: apply_rulebook.yaml  propose_patch.yaml  run_generate.yaml  stage_c_validate.yaml  stage_d_judge.yaml
src/ai_etl/: __init__.py  cli.py  compare.py  config.py  io.py  llm_ollama.py  models.py  prompts.py  propose.py  store_chroma.py  yamlutil.py
tests/: test_benchmark_manifest.py  test_compare.py  test_propose.py
(+16 files in other folders)
