[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-etl"
version = "0.1.0"
description = "Prompt-driven AI ETL CLI"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "AI ETL"}]
dependencies = [
  "typer>=0.12.3",
  "requests>=2.31.0",
  "pydantic>=2.7.0",
  "chromadb>=0.5.0",
  "pyyaml>=6.0.1",
]

[project.scripts]
ai-etl = "ai_etl.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
